--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -21,9 +21,13 @@
 }
 
 .post p {
-  text-align: justify;
+  text-align: left;
   text-indent: 1.5em;
-  text-justify: inter-word;
+  text-justify: none;
+}
+
+.post p + p {
+  margin-bottom: 30px;
 }
 
 .post p:first-of-type,
